--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="dummy">Dummy</string>
+    <string name="title_activity_joke_detail">JokeDetailActivity</string>
 </resources>
